# tgbot

./: .dockerignore  .gitignore  Dockerfile  __main__.py  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt
bot/: settings.py
bot/db/: engine.py  models.py  redis.py  requests.py
bot/db/migrations/: env.py
bot/filters/: date.py  user.py
bot/handlers/: apsched.py  basic.py  privateall.py  privatemembers.py  supergroup.py
bot/keyboard/: commands.py  inline.py  reply.py
bot/middleware/: db.py  users.py
bot/scheduler/: scheduler.py
bot/templates/: privateTMPL.py
bot/utils/: commands.py  statesform.py
core/: settings.py
core/db/: connect.py  create.py  other.py  requests.py  user.py
core/handlers/: apsched.py  basic.py  private.py  supergroup.py
core/keyboard/: inline.py  reply.py
core/middleware/: group.py
core/templates/: privateTMPL.py
core/utils/: commands.py  convert.py  date.py  entities.py
src/: main.py  utils.py
src/app/: middleware.py  router.py
src/app/routers/: webapp.py
src/app/static/: style.css  utils.js
src/app/templates/: index.html
src/bot/: states.py
src/bot/filters/: user.py
src/bot/handlers/: apsched.py  basic.py  bot_messages.py  private_all.py  private_members.py  privatemembers.py  supergroup.py
src/db/: engine.py  models.py  redis.py  requests.py  scheduler.py
tests/: test_sqlalchemy.py
tgbot/: main.py  settings.py  utils.py
tgbot/bot/: datetime_utils.py  states.py
tgbot/db/: engine.py  models.py  redis_instance.py  requests.py  requests2.py  scheduler.py
(+48 files in other folders)
