[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["sulgeese <sul.geese@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
redis = "^5.2.1"
aiogram = "^3.17.0"
apscheduler = "^3.11.0"
sqlalchemy = "^2.0.37"
environs = "^14.1.0"
apscheduler-di = "^0.1.0"
six = "^1.17.0"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
